i THINK i'm finally done...

--- a/Docs/Meza-FidalgoOzogPepper_ENV872_Project_Draft.Rmd
+++ b/Docs/Meza-FidalgoOzogPepper_ENV872_Project_Draft.Rmd
@@ -295,7 +295,7 @@ print(Pinniped_Stranding_Plot)
 <br>
 
 Pinniped data exploration indicates a possible overall increasing trend in pinniped strandings and a possible monthly/seasonal trend.  There is some fluctuation in number of total yearly strandings both for the family as a whole and at the species level, although a more detailed species level analysis is beyond the scope of this project. Harp and harbor seals make up most of the strandings each year. Most yearly strandings occur in the late winter and spring time, particularly in March, with very few in the late summer through the early winter. Springtime coincides with the pupping seasons for many seal species and could be a factor in this. Pinniped strandings are most numerous throughout the coastline of Rhode Island and the eastern coastline of Connecticut, as seen in Map 2 below.
-
+<br>
 <br>
 
 <center>***Map 2**: Geospatial Exploration of Pinniped Strandings*</center>
@@ -311,7 +311,6 @@ mapview(Pinniped_sf)
 <br>
 
 ##### Pinniped Stranding Statistical Analysis
-<br>
 The following are the null and alternative hypothesis for the annual and monthly statistical analysis using Poisson Models (GLM):
 
 **Null Hypothesis 1**: There is no effect of year on the total number of pinniped strandings
@@ -339,11 +338,11 @@ summary(Monthly_Pinniped_Model)
 <br>We reject the null hypothesis that there is no effect of month on the total number of pinniped strandings.  11 of the 12 months had p-values of less than 0.05, with July being the exception.  The p-values of the statistically significant month ranged from 1.77e-15(March) to 0.02(June).  The null deviance for the monthly model was 5.95e+02 on 11 degrees of freedom and a residual deviance of -3.55e-15. 
 
 This information can lead to further study as to why years and months differ and develop ways to predict and/or mitigate particularly bad years and/or months for pinnped strandings.
-
+<br>
+<br>
 
 ##### Pinniped Geospatial Analysis
 <br>
-
 ```{r Pinniped Geospatial Analysis, message = FALSE, warning = FALSE, include = FALSE}
 #Converting the data points to UTM for further analysis. The study are straddles UTM zones 18 and 19, zone 19 was chosen because that is where the greatest concentration of points seems to be located.
 
@@ -371,7 +370,6 @@ Pinniped_sf_utm  <-  Pinniped_sf_utm %>%
   bind_cols(mean_distance = mean_distance)
 ```
 
-
 <center>***Map 3**: Pinniped Distance (m) from Mean Stranding Point*</center>
 <center>
 ```{r Pinniped Stranding Mean, message = FALSE, warning = FALSE, echo = FALSE}
@@ -384,7 +382,6 @@ mapview(Pinniped_sf_utm,
 <br>
 
 By finding the "mean" stranding location based on the all of the data points it can be determined how far each stranding point is from the mean. By determining that 425 out of 679, or 62.5 percent of, pinniped strandings occur within 40km of the mean stranding location, what makes this area a hotspot can be studied and hopefully also determined. This data also could allow for reallocation of stranding resources and personnel to this range in order to put them to the most efficient use possible. Since only 54, or 8 percent of, pinniped strandings occur further than 60km from the stranding mean, resources for study and rescue can be allocated away from those areas. A table containing the distance of the all of the data points from the  "mean" stranding location can be found in Table 2 below.
-<br>
 
 ```{r Pinniped Distance Table, message = FALSE, warning = FALSE, include = FALSE}
 #Developing a mean distance table
@@ -441,8 +438,7 @@ Pinniped_distances <- Pinniped_sf_utm_final %>%
 #kable(Pinniped_distances)
 #Table Reorganized manually based on kable results
 ```
-
-
+<br>
 
 <center>***Table 2**: Number of Pinniped Strandings per Distance (m) from the Mean *</center>
 
@@ -493,7 +489,7 @@ Pinniped_ts_monthly <- ts(Pinniped_Stranding_Totals_Final$Total,
 Pinniped_ts_monthly_decomp <- stl(Pinniped_ts_monthly, s.window = "periodic")
 plot(Pinniped_ts_monthly_decomp)
 ```
-
+<br>
 
 ```{r Pinniped Monthly Time Series 2, message = FALSE, warning = FALSE, include = FALSE}
 Pinniped_ts_monthly_trend <- Kendall::SeasonalMannKendall(Pinniped_ts_monthly)
@@ -507,6 +503,7 @@ A Mann Kendall test was run for the yearly time series. Based on the results, we
 A seasonal Mann Kendall test was run for the monthly time series. Based on the results, we  reject the null hypothesis that monthly pinniped strandings are stationary, with a p-value of 7.80e-6. The decomposition indicates a general upward trend as well as seasonality, which fits with the patterns that were seen in the exploratory analysis (Figure 7).
 
 <br>
+
 
 
 ### 2. Odontocetes:
@@ -598,7 +595,6 @@ summary(odontocete_stranding_data)
 
 ##### Odontocete Data Exploration
 <br>
-
 <center>***Figure 8**: Total Odontocete Strandings per Year by Species*</center>
 ```{r Odontocete Data Exploration 1, warning = FALSE, message = FALSE, echo = FALSE, fig.align = "center"}
 #By year
@@ -624,6 +620,7 @@ ggplot(odontocete_stranding_data) +
 <br>
 
 There appears to be an increasing trend in the total number of odontocete strandings as the years progress (Figure 8). The odontocete strandings have the lowest amount in 1993 and the highest in 2011, where the count gradually increases over the years. The different species that are stranded throughout the years do not appear to have a noticeable trend. When looking at the strandings per month in Figure 9, the months with the most strandings are during March, May, and July. There may be possible seasonal trends, where the spring and early summer see a greater number of strandings than the other months due to calving season. When looking at Figure 10 below, you can see the trend in the number of strandings of odontocetes over the years, and how they are increasing. All of these strandings can be seen in the Map 4 below.
+
 <br>
 
 <center>***Figure 10**: Odontocete Strandings per Year*</center>
@@ -653,7 +650,6 @@ mapview(odontocete_sf, layer.name = "Odontocete Strandings")
 
 
 ##### Odontocete Stranding Statistical Analysis
-
 The following are the null and alternative hypothesis for the annual and monthly statistical analysis using Poisson Models (GLM):
 
 **Null Hypothesis 1**: There is no effect of individual year on the total number of odontocete strandings.
@@ -677,6 +673,7 @@ summary(odontocete_model2)
 <br>We reject the null hypothesis that there is no effect of month on the total number of odontocete strandings. There were four months in which the odonotocete strandings were statistically significant: January, March, May, and June. The most statistucally significant months were January and May with p-values of 4.35e-11 and 0.00858 respectively. March had a p-value of  0.02389 and June had a p-value of 0.03344. The null deviance was 3.7282e+01 and the residual deviance was -3.5527e-15.
 
 This indicates that there is a difference in the number of odontocete strandings across the years and months of the study. This could be explained by increase boat and shipping traffic as the years progress that contribute to increased ocean noise and interference with their communication that have led them to become stranded. Seasonality may not have an effect because of the consistency of boat and ship traffic throughout each year.
+
 <br>
 
 
@@ -719,6 +716,7 @@ mapview(odontocete_sf_utm,
 <br>
 
 Knowing where the "mean" stranding location is could allow for a study of that area in order to determine why odontocete strandings are so prominent on this area and allow for the allocation of more recovery resources and personnel to that area to compensate for the higher levels of strandings. Much of the strandings occurred from Charlestown to Newport, in the Rhode Island Sound.
+
 <br>
 
 
@@ -796,6 +794,7 @@ grater than 180,000 | 1
 <br>
 
 Of the 155 odontocete strandings used in our analysis, 125 of them were within 40,000m of mean latitude and longitude stranding location. This was followed by 20 strandings that were within 40,000m to 60,000m from the mean stranding location. The remaining 10 strandings were scattered farther than 60,000m, and there was one stranding that was greater than 180,000m from the mean stranding location. These values can be seen in Table 3 above. Most of the strandings were centered near Newport, in the Rhode Island Sound. There were also many strandings that were located up in Narragansett Bay. The increased stranding areas in Rhode Island Sound may be due to anthropogenic effects such as higher boat traffic and increased amounts of fishing. It may also be due to the area having an abundance of food for the odontocetes, which push them closer to shore. This area is densely populated, so the stranding count may be higher because of closer monitoring. Further research will be needed to determine what may contribute to odontocetes stranding from Charlestown to Newport, in the Rhode Island Sound. 
+
 <br>
 
 
@@ -840,6 +839,8 @@ summary(odontocete_ts_monthly_trend)
 A Mann Kendall test was run for our yearly time series. Based on the results, we reject the null hypothesis and say that odontocete yearly stranding data is not stationary due to a p-value of 4.4296e-13.
 
 A seasonal Mann Kendall test was run for our monthly time series. Based on the results, we reject the null hypothesis and say that odontocetes monthly stranding data is not stationary due to a p-value of 1.3611e-07. This can also be seen in our decomposition where there appears to be a seasonal trend in the data over the years (Figure 11). 
+
+
 <br>
 
 
@@ -932,7 +933,6 @@ summary(mysticete_stranding_data)
 
 ##### Mysticete Data Exploration
 <br>
-
 <center> ***Figure 12**: Total Mysticete Strandings per Year by Species*</center>
 ```{r Mysticete Data Exploration1, warning = FALSE, message = FALSE, echo = FALSE, fig.align="center"}
 #By year
@@ -958,6 +958,7 @@ ggplot(mysticete_stranding_data) +
 <br>
 
 There appears to be an increasing trend in the number of mysticete strandings in the later years of the study. The year with the highest number of strandings was 2004 and the second highest was 2009. There was also lots of variation with the species of that were stranded in each year. When looking at Figure 13, there also appears to be a seasonal trend based on the number of strandings per each month, where the months of June and July have a much greater ammount than the rest of the year. There may be possible seasonal trends, where the early summer see a greater number of strandings than the other months due to calving season.
+
 <br>
 
 <center>***Figure 14**: Mysticete Strandings per Year*</center>
@@ -974,6 +975,7 @@ print(mysticete_stranding_plot)
 <br>
 
 When looking at Figure 14 above, you can see the trend in the number of strandings of mysticetes over the years is increasing, but not by much. It appears that the number of strandings is consistent until 2000, where the numbers increase before dropping down again in 2009. All of these strandings can be seen in Map 6 below.
+
 <br>
 
 <center>***Map 6**: Geospatial Exploration of Mysticete Strandings*</center>
@@ -1013,6 +1015,7 @@ summary(mysticete_model2)
 
 
 This indicates that there is no difference in the number of mysticete strandings across the years, but there is a difference in the months of the May and June study. Seasonality appears to affect the number of mysticete strandings as there are more occurances druring May and June than any other month while there is not a significant difference in the number of strandings in different years. The seasonal increase in strandings may be due to calving season, but further research would be needed to determine the cause.
+
 <br>
 
 ##### Mysticete Geospatial Analysis
@@ -1108,6 +1111,7 @@ mysticete_distances <- mysticete_sf_utm_final %>%
 
 kable(mysticete_distances)
 ```
+<br>
 
 <center>***Table 4**: Number of Mysticete Strandings per Distance (m) from the Mean* </center>
 Distance (m) | Number of Strandings
@@ -1123,6 +1127,8 @@ less than 40,000 | 44
 
 
 Of the 50 mysticete strandings used in our analysis, 44 of them were within 40,000m of mean latitude and longitude stranding location. This was followed by 5 strandings that were within 40,000m to 60,000m from the mean stranding location. The remaining stranding was located between 140,000m to 160,000m away from the mean stranding location. These values can be seen in Table 4 above. Most of the strandings were centered near Newport, in the Rhode Island Sound. There were also some strandings that were located up in Narragansett Bay. The increased stranding areas in Rhode Island Sound may be due to anthropogenic effects such as higher boat traffic and increased amounts of fishing. It may also be due to the area having an abundance of food for the mysticetes, which push them closer to shore. This area is densely populated, so the stranding count may be higher because of closer monitoring. Further research will be needed to determine what may contribute to mysticetes stranding from Charlestown to Newport, in the Rhode Island Sound.
+
+
 <br>
 
 ##### Mysticete Temporal Analysis
@@ -1166,6 +1172,8 @@ summary(mysticete_ts_monthly_trend)
 A Mann Kendall Test was run for our yearly time series. Based on the results, we reject the null hypothesis and say that mysticete yearly stranding data is not stationary due to a p-value of less than 2.22e-16.
 
 A seasonal Mann Kendall Test was run for our yearly time series. Based on the results, we reject the null hypothesis and say that mysticetes monthly stranding data is not stationary due to a p-value of 0.014425. This can also be seen in our decomposition where there appears to be a seasonal trend in the data over the years (Figure 15). 
+
+
 <br>
 
 
@@ -1248,6 +1256,7 @@ ggplot(Strandings_Totals_Year, aes(x = Year, y = Turtles_Total)) +
 <br>
 
 Exploratory analysis of the sea turtle stranding data set by year shows higher amounts of strandings in the early 1990s and late 2000s, with the highest amount in 1995 (Figure 16). The most prominent species throughout our study period appear to be leatherback sea turtles, followed by loggerhead sea turtles. Through monthly data exploration, strandings peak from July to September and occur less frequently the remainder of the year (Figure 17).
+
 <br>
 
 <center>***Map 8**: Geospatial Exploration of Sea Turtle Strandings*</center>
@@ -1283,6 +1292,7 @@ summary(Turtle_Model_Month)
 
 *Monthly Analysis*:
 <br>We reject the null hypothesis that month has no effect on sea turtle strandings. Of the 12 months, 5 of months were significantly different. May (p-value: 0.000269), June (p-value: 3.98e-06), July (p-value: 1.91e-05), August (p-value: 0.004106), and September (p-value: 0.049935) were significantly different. This indicates that sea turtle strandings are concentrated to the summer months in our study area. The null deviance of this model is 4.9235e+02 and the residual deviance is 3.0332e-10.
+
 <br>
 
 ##### Sea Turtle Geospatial Analysis
@@ -1387,7 +1397,9 @@ Turtle_distances <- Turtle_sf_utm_final %>%
 kable(Turtle_distances)
 ```
 
-Of the 256 sea turtle strandings used in our analysis, 113 of them occured within 20,000 - 40,000m of the mean stranding location, followed by 92 strandings within 20,000m of the mean location (Table 5). These points were in the areas around Charlestown, RI, Newport, RI and New Shoreham, RI. This high concentration of strandings can indicate that these areas may be sea turtle stranding hotspots. This could be due to various factors, such as the flow of oceanic currents, anthropogenic impacts (such as higher fishing presrure), or the fact that there may be more manpower employed in these areas that could make stranding detection easier. Further research is needed to determine how these underlying factors may be contibuting to sea turtle strandings in these areas. 
+Of the 256 sea turtle strandings used in our analysis, 113 of them occured within 20,000 - 40,000m of the mean stranding location, followed by 92 strandings within 20,000m of the mean location (Table 5). These points were in the areas around Charlestown, RI, Newport, RI and New Shoreham, RI. This high concentration of strandings can indicate that these areas may be sea turtle stranding hotspots. This could be due to various factors, such as the flow of oceanic currents, anthropogenic impacts (such as higher fishing presrure), or the fact that there may be more manpower employed in these areas that could make stranding detection easier. Further research is needed to determine how these underlying factors may be contributing to sea turtle strandings in these areas. 
+
+
 <br>
 
 <center>***Table 5**: Number of Sea Turtle Strandings per Distance (m) from the Mean*</center>
@@ -1410,8 +1422,8 @@ The following are the null and alternative hypothesis for the yearly and monthly
 **Null Hypothesis**: The yearly and/or monthly/seasonal turtle stranding data is stationary.
 
 **Alternative Hypothesis**: The yearly and/or monthly/seasonal turtle stranding data is not stationary
-<br>
 
+<br>
 ```{r turtle yearly time series, message = FALSE, warning = FALSE, include = FALSE}
 Turtle_ts_yearly <- ts(Turtle_strandings_date_final, start = 1990, frequency = 1)
 
@@ -1419,7 +1431,6 @@ Turtle_ts_yearly_trend <- MannKendall(Turtle_ts_yearly)
 
 summary(Turtle_ts_yearly_trend)
 ```
-<br>
 
 <center>***Figure 19**: Sea Turtle Decomposition*</center>
 ``` {r turtle monthly time series1, message = FALSE, warning = FALSE, echo = FALSE, fig.align="center"}
@@ -1447,7 +1458,7 @@ A seasonal Mann Kendall Test was run for our monthly time series. Based on the r
 
 
 \newpage
-
+<br>
 
 # Summary and Conclusions
 
